@@ -105,7 +105,7 @@ public class NetatmoConstants {
 
                 channels.put(String.join("-", apiDescriptor, "measurement"),
                         new MeasureChannelDetails(confFragment, String.join(":", NUMBER, dimension),
-                                String.format("%%.%df %s", measureDefinition.scale, UnitUtils.UNIT_PLACEHOLDER)));
+                                "%%.%df %s".formatted(measureDefinition.scale, UnitUtils.UNIT_PLACEHOLDER)));
                 if (canScale) {
                     channels.put(String.join("-", apiDescriptor, GROUP_TIMESTAMP), new MeasureChannelDetails(
                             GROUP_TIMESTAMP, DATETIME, "@text/extensible-channel-type.timestamp.pattern"));
